# LMS

./: .envrc  .gitignore  .mailmap  CMakeLists.txt  Git提交指南.md  Path工具类设计指导.md  README.md  filelist.txt  从零开始实现计划.md  使用说明.md  学习指导工作流程.md  学习路径总结.md  学习进度跟踪.md  开发快速参考.md  开发日志.md  快速开始.md  模板项目架构分析.md  环境搭建完成总结.md  环境搭建指南.md  目录讲解.md  移植路线图.md  第一步完成总结.md  详细开发步骤指南.md  项目学习指南.md
src/libs/: CMakeLists.txt
src/libs/audio/: CMakeLists.txt
src/libs/audio/impl/: AudioFileInfo.cpp  AudioTypes.cpp  ImageReader.cpp  ParseAudioFileInfo.cpp  TagReader.cpp
src/libs/audio/impl/ffmpeg/: AudioFile.cpp  AudioFile.hpp  AudioFileInfo.cpp  AudioFileInfo.hpp  ImageReader.cpp  ImageReader.hpp  TagReader.cpp  TagReader.hpp  Transcoder.cpp  Transcoder.hpp  Utils.cpp  Utils.hpp
src/libs/audio/impl/taglib/: AudioFileInfo.cpp  AudioFileInfo.hpp  ImageReader.cpp  ImageReader.hpp  TagLibDefs.hpp  TagReader.cpp  TagReader.hpp  Utils.cpp  Utils.hpp
src/libs/audio/include/audio/: AudioProperties.hpp  AudioTypes.hpp  Exception.hpp  IAudioFileInfo.hpp  IImageReader.hpp  ITagReader.hpp  ITranscoder.hpp  TranscodeTypes.hpp
src/libs/core/: CMakeLists.txt
src/libs/core/impl/: ArchiveZipper.cpp  ArchiveZipper.hpp  ChildProcess.cpp  ChildProcess.hpp  ChildProcessManager.cpp  ChildProcessManager.hpp  Config.cpp  Config.hpp  FileResourceHandler.cpp  FileResourceHandler.hpp  IOContextRunner.cpp  JobScheduler.cpp  JobScheduler.hpp  Logger.cpp  Logger.hpp  MimeTypes.cpp  NetAddress.cpp  PartialDateTime.cpp  Path.cpp  Random.cpp  RecursiveSharedMutex.cpp  String.cpp  TraceLogger.cpp  TraceLogger.hpp  UUID.cpp  Version.cpp.in  XxHash3.cpp
src/libs/core/impl/http/: Client.cpp  Client.hpp  ClientRequest.hpp  SendQueue.cpp  SendQueue.hpp
src/libs/core/include/core/: Crc32Calculator.hpp  EnumSet.hpp  Exception.hpp  FileResourceHandlerCreator.hpp  IChildProcess.hpp  IChildProcessManager.hpp  IConfig.hpp  IJob.hpp  IJobScheduler.hpp  ILogger.hpp  IOContextRunner.hpp  IResourceHandler.hpp  ITraceLogger.hpp  IZipper.hpp  LiteralString.hpp  MimeTypes.hpp  NetAddress.hpp  PartialDateTime.hpp  Path.hpp  Random.hpp  RecursiveSharedMutex.hpp  (+11 more)
src/libs/core/test/: test_config.cpp  test_logger.cpp  test_path.cpp  test_string.cpp  test_uuid.cpp
src/libs/database/: CMakeLists.txt
src/libs/database/impl/: Db.cpp  Db.hpp  IdType.cpp  Migration.cpp  Migration.hpp  Object.cpp  QueryPlanRecorder.cpp  QueryPlanRecorder.hpp  Session.cpp  SqlQuery.cpp  SqlQuery.hpp  Transaction.cpp  TransactionChecker.cpp  TransactionChecker.hpp  Types.cpp  Utils.cpp  Utils.hpp
src/libs/database/test/: TrackArtistLink.cpp  test_database.cpp
src/libs/image/: CMakeLists.txt
src/libs/image/impl/: EncodedImage.cpp  EncodedImage.hpp
src/libs/services/: CMakeLists.txt
src/libs/services/artwork/: CMakeLists.txt
src/libs/services/auth/: CMakeLists.txt
src/libs/services/podcast/: CMakeLists.txt
src/libs/services/scanner/: CMakeLists.txt
src/libs/services/scrobbling/: CMakeLists.txt
src/libs/som/: CMakeLists.txt
src/libs/som/impl/: DataNormalizer.cpp  Network.cpp
src/libs/som/test/: CMakeLists.txt  SomTest.cpp
src/libs/subsonic/: CMakeLists.txt
src/libs/subsonic/impl/: CoverArtId.cpp  CoverArtId.hpp  ParameterParsing.cpp  ParameterParsing.hpp  ProtocolVersion.cpp  ProtocolVersion.hpp  RequestContext.cpp  RequestContext.hpp  ResponseFormat.cpp  ResponseFormat.hpp  SubsonicId.cpp  SubsonicId.hpp  SubsonicResource.cpp  SubsonicResource.hpp  SubsonicResourceConfig.cpp  SubsonicResourceConfig.hpp  SubsonicResponse.cpp  SubsonicResponse.hpp  SubsonicResponseAllocator.hpp  TLSMonotonicMemoryResource.hpp
src/libs/subsonic/test/: SubsonicResponseTest.cpp
src/lms/: CMakeLists.txt  main.cpp
src/lms/ui/: Auth.cpp  Auth.hpp  LmsApplication.cpp  LmsApplication.hpp  LmsApplicationException.hpp  LmsApplicationManager.cpp  LmsApplicationManager.hpp  LmsInitApplication.cpp  LmsInitApplication.hpp  LmsTheme.cpp  LmsTheme.hpp  MediaPlayer.cpp  MediaPlayer.hpp  ModalManager.cpp  ModalManager.hpp  Notification.hpp  NotificationContainer.cpp  NotificationContainer.hpp  PlayQueue.cpp  PlayQueue.hpp  SettingsView.cpp  SettingsView.hpp  State.cpp  State.hpp  Tooltip.cpp  Tooltip.hpp  Utils.cpp  Utils.hpp
src/lms/ui/admin/: About.cpp  About.hpp  DebugToolsView.cpp  DebugToolsView.hpp  InitWizardView.cpp  InitWizardView.hpp  MediaLibrariesView.cpp  MediaLibrariesView.hpp  MediaLibraryModal.cpp  MediaLibraryModal.hpp  ScanSettingsView.cpp  ScanSettingsView.hpp  ScannerController.cpp  ScannerController.hpp  ScannerReportResource.cpp  ScannerReportResource.hpp  UserView.cpp  UserView.hpp  UsersView.cpp  UsersView.hpp
src/lms/ui/common/: DoubleValidator.cpp  DoubleValidator.hpp  InfiniteScrollingContainer.cpp  InfiniteScrollingContainer.hpp  LoadingIndicator.cpp  LoadingIndicator.hpp  LoginNameValidator.cpp  LoginNameValidator.hpp  MandatoryValidator.cpp  MandatoryValidator.hpp  PasswordValidator.cpp  PasswordValidator.hpp  Template.cpp  Template.hpp  UUIDValidator.cpp  UUIDValidator.hpp  UppercaseValidator.cpp  UppercaseValidator.hpp  ValueStringModel.hpp
src/lms/ui/explore/: ArtistCollector.cpp  ArtistCollector.hpp  ArtistListHelpers.cpp  ArtistListHelpers.hpp  ArtistView.cpp  ArtistView.hpp  ArtistsView.cpp  ArtistsView.hpp  DatabaseCollectorBase.cpp  DatabaseCollectorBase.hpp  DropDownMenuSelector.hpp  Explore.cpp  Explore.hpp  Filters.cpp  Filters.hpp  PlayQueueController.cpp  PlayQueueController.hpp  ReleaseCollector.cpp  ReleaseCollector.hpp  ReleaseHelpers.cpp  ReleaseHelpers.hpp  ReleaseTypes.cpp  ReleaseTypes.hpp  ReleaseView.cpp  ReleaseView.hpp  ReleasesView.cpp  ReleasesView.hpp  SortModeSelector.hpp  TrackArtistLinkTypeSelector.hpp  TrackCollector.cpp  TrackCollector.hpp  TrackListHelpers.cpp  TrackListHelpers.hpp  TrackListView.cpp  TrackListView.hpp  TrackListsView.cpp  TrackListsView.hpp  TracksView.cpp  TracksView.hpp
src/lms/ui/resource/: ArtworkResource.cpp  ArtworkResource.hpp  AudioFileResource.cpp  AudioFileResource.hpp  AudioTranscodingResource.cpp  AudioTranscodingResource.hpp  DownloadResource.cpp  DownloadResource.hpp
(+435 files in other folders)
