add_subdirectory(audio) # 添加各个子模块目录# audio模块 - 音频处理相关功能
add_subdirectory(core) # core模块 - 核心功能实现
add_subdirectory(database) # database模块 - 数据库操作相关功能
add_subdirectory(image) # image模块 - 图像处理相关功能
add_subdirectory(services) # services模块 - 服务相关功能
add_subdirectory(som) # som模块 - 自组织映射相关功能
add_subdirectory(subsonic) # subsonic模块 - Subsonic媒体服务器相关功能
