add_subdirectory(artwork) # 添加各个子模块目录# artwork模块：处理艺术作品相关功能
add_subdirectory(auth) # auth模块：处理用户认证相关功能
add_subdirectory(feedback) # feedback模块：处理用户反馈相关功能
add_subdirectory(podcast) # podcast模块：处理播客相关功能
add_subdirectory(recommendation) # recommendation模块：处理推荐系统相关功能
add_subdirectory(scanner) # scanner模块：处理扫描相关功能
add_subdirectory(scrobbling) # scrobbling模块：处理歌曲记录功能
add_subdirectory(transcoding) # transcoding模块：处理音频转码相关功能
